<resources>
    <string name="app_name">AndroidFundamentalsPractice</string>

    <string name="enter_structure_activity_button_text">Enter Structure Activity</string>
    <string name="enter_vl_activity_button_text">Enter Views and Layout Activity</string>

    <string name="enter_screen_rotation_button_text">Enter Screen Rotation</string>
    <string name="screen_rotation_save_button_text">Save</string>
    <string name="screen_rotation_edittext_text">Enter a text to save</string>
    <string name="screen_rotation_textview_text">Empty Value</string>
    <string name="screen_rotation_textview_saved_text">Saved Successfully!</string>

    <string name="enter_permission_activity_button_text">Enter Permission Activity</string>

    <string name="permission_microphone_request_textview_text">Request Microphone Access</string>
    <string name="permission_contact_request_textview_text">Request Contact Access</string>

    <string name="enter_text_view_button_text">Enter TextView Activity</string>
    <string name="enter_edit_text_button_text">Enter Edit Text Activity</string>
    <string name="enter_image_view_button_text">Enter Image View Activity</string>
    <string name="enter_input_view_button_text">Enter Input View Activity</string>

    <string name="blue_shadow_text_view">This text has a blue shadow</string>
    <string name="all_caps_text_view">This text is in all caps</string>
    <string name="image_text_view">This text has an image to the left</string>
    <string name="custom_font_text_view">This text is custom font</string>

    <string name="text_highlight_hint_edit_text">Highlight this for a surprise</string>
    <string name="text_digit_limit_hint_edit_text">This only takes 0s and 1s</string>
    <string name="username_hint_edit_text">Username</string>
    <string name="text_counter_hint_edit_text">This has a text counter</string>

    <string name="password_hint_edit_text">Password</string>

    <string name="meat_checkbox_text">Meat</string>
    <string name="cheese_checkbox_text">Cheese</string>

    <string name="pirate_radio_button_text">Pirate</string>
    <string name="ninja_radio_button_text">Ninja</string>

    <string name="planets_spinner_text">Select a planet</string>

    <string name="enter_designing_views_button_text">Enter Designing and Styling Views Activity</string>
    <string name="enter_drawable_view_button_text">Enter Drawable View Activity</string>
    <string name="enter_animations_view_button_text">Enter Animation View Activity</string>
    <string name="enter_style_and_themes_view_button_text">Enter Styles and Themes Activity</string>
    <string name="enter_custom_text_button_text">Enter Custom TextView Font Activity</string>

    <string name="solid_color_shape_text_view_text">This text has a custom drawable background</string>
    <string name="gradient_color_shape_text_view_text">This text has a custom gradient drawable background</string>
    <string name="state_list_button_text">Click Button to see State Change</string>
    <string name="nice_button_text">This Button has a style</string>

    <string name="animate_rotate_and_scale_button_text">rotate and scale</string>
    <string name="animate_alpha_button_text">alpha</string>
    <string name="animate_translate_button_text">translate</string>
    <string name="animate_rotate_button_text">rotate</string>
    <string name="animate_fade_out_xml_button_text">fade out with xml</string>

    <string name="animate_text_view_text">This text will be animated</string>

    <string name="enter_recycler_view_button_text">Enter Recycler View Activity</string>
    <string name="enter_card_view_button_text">Enter Card View Activity</string>
    <string name="enter_adapter_view_activity_button_text">Enter Adapter Views Activity</string>

    <string name="style_text_view_text">This TextView has a set style</string>
    <string name="theme_button_text">This Activity has a custom theme that alters button text</string>

    <string name="enter_data_persistence_activity_button_text">Enter Data Persistence Activity</string>
    <string name="enter_shared_pref_button_text">Enter Shared Prefernces Activity</string>
    <string name="enter_internal_storage_button_text">Enter Internal Storage Activity</string>
    <string name="enter_external_storage_button_text">Enter External Storage Activity</string>
    <string name="enter_sqlite_database_button_text">Enter Sqlite Database Activity</string>
    <string name="enter_content_provider_button_text">Enter Content Provider Activity</string>

    <string name="load_shared_preference_button_text">Load Preference</string>
    <string name="add_shared_preference_button_text">Add Preference</string>
    <string name="shared_preference_key_edit_text_hint">Shared Preference Key</string>
    <string name="shared_preference_value_edit_text_hint">Shared Preference Value</string>
    <string name="shared_preference_text_view_default_text">Value will appear here</string>

    <string name="load_internal_storage_button_text">Load File</string>
    <string name="add_internal_storage_button_text">Add File</string>
    <string name="internal_storage_message_edit_text_hint">Enter Message Here</string>
    <string name="internal_storage_file_name_edit_text_hint">Enter File Name Here</string>
    <string name="internal_storage_text_view_default_text">Loaded message will appear here</string>

    <string name="load_external_storage_button_text">Load File</string>
    <string name="add_external_storage_button_text">Add File</string>
    <string name="external_storage_message_edit_text_hint">Enter Message Here</string>
    <string name="external_storage_file_name_edit_text_hint">Enter File Name Here</string>
    <string name="external_storage_text_view_default_text">Loaded message will appear here</string>

    <string name="enter_fragments_button_text">Enter Fragments Activity</string>
    <string name="enter_create_fragments_button_text">Enter Create Fragment Activity</string>
    <string name="enter_dialog_fragment_button_text">Enter Dialog Fragment Activity</string>
    <string name="enter_view_pager_button_text">Enter View Pager Activity</string>
    <string name="enter_flexible_ui_button_text">Enter Flexible UI Activity</string>

    <string name="show_dialog_fragment_custom_button_text">Show Dialog Fragment Custom</string>
    <string name="show_dialog_fragment_alert_button_text">Show Alert Dialog Fragment</string>
    <string name="show_dialog_fragment_returned_value_button_text">Show Value Returned</string>

    <string name="enter_services_activity_button_text">Enter Services Activity</string>
    <string name="start_intent_service_result_receiver_button_text">Start Intent Service with Result Receiver</string>
    <string name="start_intent_service_broadcast_receiver_button_text">Start Intent Service with Broadcast Receiver</string>
    <string name="start_intent_service_alarm_manager_button_text">Start Intent Service with Alarm Manager</string>
    <string name="begin_notifications_button_text">Begin Notifications</string>
    <string name="begin_bound_service_button_text">Begin Bound Service</string>

    <string name="enter_networking_activity_button_text">Enter Network and Models Activity</string>
    <string name="enter_okhttp_activity_button_text">Enter OkHttp Activity</string>
    <string name="enter_retrofit_activity_button_text">Enter Retrofit Activity</string>

    <string name="retrieve_content_provider">Retrieve Contacts</string>
    <string name="create_content_provider">Create Content Provider</string>

    <string name="increment_button">Increment</string>
    <string name="reset_button">Reset</string>

    <string name="custom_font_text_view_text">This text has custom font using a Text View</string>
    <string name="custom_font_custom_view_text">This text has custom font using a Custom View</string>

    <string name="enter_data_binding_activity_button_text">Enter Data Binding Activity</string>
    <string name="enter_dagger_activity_button_text">Enter Dagger 2 Activity</string>
    <string name="enter_kotlin_activity_button_text">Enter Kotlin Activity</string>
    <string name="enter_rx_java_activity_button_text">Enter Rx Java Activity</string>

    <string name="include_default_text">This is a include layout with passed in user name: </string>
    <string name="first_name_hint_text">First name</string>
    <string name="last_name_hint_text">Last name</string>
    <string name="age_hint_text">Age</string>
    <string name="click_me_button_text">Click me </string>
    <string name="click_me_listener_button_text">Click me for listener binding</string>
    <string name="imported_data_text">This text is using a imported data type</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
