<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kevinlay.androidfundamentalspractice.MainActivity">

    <Button
        android:id="@+id/bEnterStructureActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_structure_activity_button_text" />

    <Button
        android:id="@+id/bEnterViewsAndLayoutActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_vl_activity_button_text" />

    <Button
        android:id="@+id/bEnterDesignActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_designing_views_button_text" />

    <Button
        android:id="@+id/bEnterAdapterViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_adapter_view_activity_button_text" />

    <Button
        android:id="@+id/bEnterDataPersistence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_data_persistence_activity_button_text" />

    <Button
        android:id="@+id/bEnterFragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_fragments_button_text" />

    <Button
        android:id="@+id/bEnterServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_services_activity_button_text" />

    <Button
        android:id="@+id/bEnterNetworking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_networking_activity_button_text" />

    <Button
        android:id="@+id/bEnterDataBinding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_data_binding_activity_button_text" />

</LinearLayout>
