<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kevinlay.androidfundamentalspractice.DesigningAndStylingViews.AnimationActivity">


    <TextView
        android:id="@+id/tvAnimateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/animate_text_view_text" />

    <Button
        android:id="@+id/bAnimateAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_alpha_button_text" />

    <Button
        android:id="@+id/bAnimateRotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_rotate_button_text" />

    <Button
        android:id="@+id/bAnimateTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_translate_button_text" />

    <Button
        android:id="@+id/bAnimateScaleX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_rotate_and_scale_button_text" />

    <Button
        android:id="@+id/bAnimateFadeOutXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animate_fade_out_xml_button_text" />
</LinearLayout>
