<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kevinlay.androidfundamentalspractice.DataPersistence.DataPersistenceActivity">

    <Button
        android:id="@+id/bEnterSharedPref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_shared_pref_button_text" />

    <Button
        android:id="@+id/bEnterInternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_internal_storage_button_text" />

    <Button
        android:id="@+id/bEnterExternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_external_storage_button_text" />

    <Button
        android:id="@+id/bEnterSqliteDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_sqlite_database_button_text" />

    <Button
        android:id="@+id/bEnterContentProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_content_provider_button_text" />
</LinearLayout>
