<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kevinlay.androidfundamentalspractice.MainActivity">

    <Button
        android:id="@+id/bEnterCreateFragments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_create_fragments_button_text" />

    <Button
        android:id="@+id/bEnterDialogFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_dialog_fragment_button_text" />

    <Button
        android:id="@+id/bEnterViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_view_pager_button_text" />

    <Button
        android:id="@+id/bEnterFlexibleUI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_flexible_ui_button_text" />
</LinearLayout>
