<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kevinlay.androidfundamentalspractice.Services.ServicesActivity">

    <Button
        android:id="@+id/bStartIntentServiceWithResultReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intent_service_result_receiver_button_text" />

    <Button
        android:id="@+id/bStartIntentServiceWithBroadcastReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intent_service_broadcast_receiver_button_text" />

    <Button
        android:id="@+id/bStartIntentServiceWithAlarmManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_intent_service_alarm_manager_button_text" />

    <Button
        android:id="@+id/bBeginNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_notifications_button_text" />



</LinearLayout>
