<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kevinlay.androidfundamentalspractice.Structure.StructureMainActivity">

    <Button
        android:id="@+id/bEnterTextViewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_text_view_button_text" />

    <Button
        android:id="@+id/bEnterEditTextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_edit_text_button_text" />

    <Button
        android:id="@+id/bEnterImageViewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_image_view_button_text" />

    <Button
        android:id="@+id/bEnterInputViewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_input_view_button_text" />


</LinearLayout>
